--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=30>
     <tr>
-      <td> <img src="HDIMAGE.PNG" alt=""></td>
+      <td> <img src="HDIMAGE.png" alt=""></td>
       <td>
         <h1>Ranjit choudhary</h1>
         <p><em>Founder of <strong>jio</strong> company</em>😜😜</p>
